compliance/cis/common/restrict-pod-creation-access/bad-resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: bad-pod-creator
rules:
- apiGroups: [""]
  resources: ["pods"]
  verbs: ["create", "delete", "get", "list"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: bad-all-wildcard
rules:
- apiGroups: ["*"]
  resources: ["*"]
  verbs: ["*"]
